# dozy-host

./: Cargo.toml  Dockerfile  README.md
src/: event.rs  main.rs  mediator.rs  traits.rs  user.rs
src/communication/: chat.rs  mod.rs  origins.rs  state.rs
src/configuration/: docker.rs
src/credentials/: dev.rs  mod.rs  prod.rs
src/discord/: client.rs  commands.rs  login.rs  mod.rs
src/discord/commands/: mod.rs  start.rs  stop.rs
src/docker/: connect.rs  container.rs  event_type.rs  login.rs  mod.rs
src/host/: host.rs
src/peripherals/: trait.rs
