[package]
name = "dozy-host"
version = "0.1.0"
edition = "2021"

[features]
env_credentials = [] # feature has no explicit dependencies

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
bollard = { version = "0.14.0", features = ["ssl"] }
delegate = "0.10.0"
env_logger = "0.10.1"
envy = "0.4.2"
futures = "0.3.29"
hyper = "0.14.27"
lazy_static = "1.4.0"
log = "0.4.19"
poise = "0.5.5"
serde = "1.0.179"
tokio = "1.29.1"

